avoid layout shift for slideshow

--- a/public/skin/frontend/base/default/css/styles.css
+++ b/public/skin/frontend/base/default/css/styles.css
@@ -6183,6 +6183,7 @@ div.paypal-logo span > img {
   overflow-x: auto;
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
+  margin-bottom: 20px;
 }
 
 .slideshow ul {
@@ -6206,6 +6207,7 @@ div.paypal-logo span > img {
 
 .slideshow-dots {
   text-align: center;
+  margin-top: -20px;
   margin-bottom: 20px;
 }
 
